[DAY-8] Show done label on PDP

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "d090f486b6ac47969dca38d6140e1e96"
 name = "DO Product Label"
 handle = "do-product-label"
-application_url = "https://respondent-district-inspections-domestic.trycloudflare.com"
+application_url = "https://cover-coating-exotic-lm.trycloudflare.com"
 embedded = true
 
 [webhooks]
@@ -22,7 +22,7 @@ api_version = "2025-07"
 scopes = "write_products"
 
 [auth]
-redirect_urls = ["https://respondent-district-inspections-domestic.trycloudflare.com/auth/callback", "https://respondent-district-inspections-domestic.trycloudflare.com/auth/shopify/callback", "https://respondent-district-inspections-domestic.trycloudflare.com/api/auth/callback"]
+redirect_urls = ["https://cover-coating-exotic-lm.trycloudflare.com/auth/callback", "https://cover-coating-exotic-lm.trycloudflare.com/auth/shopify/callback", "https://cover-coating-exotic-lm.trycloudflare.com/api/auth/callback"]
 
 [pos]
 embedded = false
@@ -31,4 +31,9 @@ embedded = false
 automatically_update_urls_on_dev = true
 include_config_on_deploy = true
 dev_store_url = "staging-digitaloutlook.myshopify.com"
+
+[app_proxy]
+url = "https://cover-coating-exotic-lm.trycloudflare.com"
+prefix = "apps"
+subpath = "doproductlabel"
 
