[DAY-13] Make feature search product

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "d090f486b6ac47969dca38d6140e1e96"
 name = "DO Product Label"
 handle = "do-product-label"
-application_url = "https://missouri-opposite-reporters-clinton.trycloudflare.com"
+application_url = "https://cartridges-together-arbor-enhance.trycloudflare.com"
 embedded = true
 
 [webhooks]
@@ -22,11 +22,7 @@ api_version = "2025-07"
 scopes = "write_products"
 
 [auth]
-redirect_urls = [
-  "https://missouri-opposite-reporters-clinton.trycloudflare.com/auth/callback",
-  "https://missouri-opposite-reporters-clinton.trycloudflare.com/auth/shopify/callback",
-  "https://missouri-opposite-reporters-clinton.trycloudflare.com/api/auth/callback"
-]
+redirect_urls = ["https://cartridges-together-arbor-enhance.trycloudflare.com/auth/callback", "https://cartridges-together-arbor-enhance.trycloudflare.com/auth/shopify/callback", "https://cartridges-together-arbor-enhance.trycloudflare.com/api/auth/callback"]
 
 [pos]
 embedded = false
@@ -37,6 +33,6 @@ include_config_on_deploy = true
 dev_store_url = "staging-digitaloutlook.myshopify.com"
 
 [app_proxy]
-url = "https://missouri-opposite-reporters-clinton.trycloudflare.com"
+url = "https://cartridges-together-arbor-enhance.trycloudflare.com"
 prefix = "apps"
 subpath = "doproductlabel"
